[package]
name = "llanite"
version = "0.1.0"
edition = "2021"

authors = [ "Ben McAvoy <ben.mcavoy@tutanota.com>" ]
license = "MIT"

description = "A layered game engine wrote for performance and flexibility."
repository = "https://github.com/Llanite/Llanite"
homepage = "https://github.com/Llanite/Llanite"

[dependencies]
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "local-time", "env-filter"] }

anyhow = "1.0.75"
pollster = "0.3.0"
shipyard = "0.6.2"
thiserror = "1.0.49"
tracing = "0.1.37"
winit = "0.28.7"
time = { version = "0.3.29", features = ["macros"] }
wgpu = "0.17.1"
bytemuck = { version = "1.14.0", features = ["derive"] }

[profile.release]
codegen-units = 1
strip = true
lto = true
